--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <header>
         <h2 class="container">검색</h2>
       </header>
-  
+
       <div class="container">
         <form class="FormView">
           <input type="text" placeholder="검색어를 입력하세요" autofocus>
           <button type="reset" class="btn-reset"></button>
         </form>
-  
+
         <div class="content">
           <div id="tabs"></div>
           <div id="search-keyword"></div>
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-
+    <script type="module" src="./dist/main.js"/>
     <!-- TODO: 웹팩으로 빌드한 자바스크립트를 여기에 로딩하세요 -->
   </body>
 </html>
