--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./dist/main.js"/>
+    <script src="./dist/main.js"></script>
     <!-- TODO: 웹팩으로 빌드한 자바스크립트를 여기에 로딩하세요 -->
   </body>
 </html>
